# geo-analysis

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  _config.yml  area.tif.aux.xml  environment.yml  import_data.py  noxfile.py  pyproject.toml  setup.py  test.ipynb  test_import.ipynb  testsGHS-POP.ipynb
.github/workflows/: sphinx.yml
_includes/: head-custom.html
_layout/: index.html
assets/css/: custom.scss  style.css
assets/js/: custom.js
css/: style.css
data/: BoundingBox.py  CopernicusDownloader.py  DetailLevelAdjustment.py  GHSPOPCopernicusMerged.py  GHSPOPDownloader.py  LandUseAnalyzer.py  OSMDownloader.py  RasterDownloader.py
data/boundingbox/: BoundingBox.py
data/downloader/: CopernicusDownloader.py  GHSPOPDownloader.py  OSMDownloader.py
data/utils/: BoundingBoxUtils.py  GreenAreaExtractor.py  GreenAreaFinder.py  GreenAreaFinderCopernicus.py  GreenAreaFinderOSM.py  LandUseAnalyzer.py  LandUseCopernicus.py  LandUseOSM.py  LandUtils.py  LandUtilsCopernicus.py  LandUtilsOSM.py  UtilsInterface.py
docs/: .buildinfo  EXAMPLES.doctree  EXAMPLES.html  EXAMPLES.rst  README.html  README.rst  changelog.rst  conf.py  contributing.rst  environment.pickle  genindex.html  greento.boundingbox.html  greento.boundingbox.rst  greento.data.copernicus.html  greento.data.ghspop.html  greento.data.html  greento.data.osm.html  greento.data.rst  greento.distance.html  greento.distance.rst  greento.green.html  greento.green.rst  greento.html  greento.metrics.html  greento.metrics.rst  greento.rst  greento.traffic.html  greento.traffic.rst  greento.utils.html  greento.utils.raster.html  greento.utils.raster.rst  greento.utils.rst  greento.utils.vector.html  greento.utils.vector.rst  index.html  index.rst  jupyter_examples.rst  modules.html  modules.rst  objects.inv  (+4 more)
docs/_modules/: index.html
docs/_sources/: EXAMPLES.rst.txt  README.rst.txt  index.rst.txt
docs/_static/: custom.css
docs/docs/: greento.data.osm.html  search.html
docs/doctrees/: EXAMPLES.doctree  README.doctree  environment.pickle  greento.data.doctree  greento.distance.doctree  greento.doctree  greento.green.doctree  greento.metrics.doctree  greento.traffic.doctree  greento.utils.doctree  index.doctree  modules.doctree
docs/jupyter_notebooks/: example_copernicus.rst  example_ghspop.rst  (+2 more)
examples/: bounding_box.geojson  example_copernicus.ipynb  example_ghspop.ipynb  example_green_area_finder.ipynb
test/: test_area_download.py  test_ghspop_download.py  test_land.py  test_raster_download.py
tiling_schema/: WGS84_tile_schema.dbf  WGS84_tile_schema.shp  WGS84_tile_schema.shx
(+198 files in other folders)
