[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greento"
version = "0.1.0"
description = "Spatial accessibility metrics for green areas"
readme = "README.md"
authors = [
    { name = "Lorenzo Pelanda", email = "lorenzo.pelanda@edu.unito.it" },
    { name = "Rossano Schifanella", email = "rossano.schifanella@unito.it" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Environment :: Console"
]

dependencies = [
    "requests>=2.25.1",
    "shapely>=1.8.0",
    "pyproj>=3.1.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "osmnx>=1.1.0",
    "openeo>=0.20.0",
    "rasterio>=1.1.0",
    "tqdm>=4.60.0",
    "geopandas>=0.9.0",
    "geopy>=2.0.0",
    "networkx>=2.5",
    "scipy>=1.7.0",
    "pydata-sphinx-theme>=0.7.0",
    "sphinx-autodoc-typehints>=1.12.0", 
    "sphinx-copybutton>=0.3.0"
]

[project.optional-dependencies]
dev = [
    "nox>=2022.11.21",       
    "pytest>=7.0.0",        
    "black>=22.3.0",         
    "isort>=5.10.1",        
    "mypy>=0.991"      
]

[tool.black]
line-length = 88 

[tool.mypy]
strict = true
ignore_missing_imports = true

[project.urls]
homepage = "https://github.com/lorenzopelanda/geo-analysis"
documentation = "https://github.com/lorenzopelanda/geo-analysis/docs"